--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "devDependencies": {
     "babel-cli": "6.9.0",
     "babel-plugin-add-module-exports": "0.2.1",
-    "babel-plugin-transform-class-properties": "^6.9.0",
+    "babel-plugin-transform-class-properties": "6.9.0",
+    "babel-plugin-transform-object-rest-spread": "6.8.0",
     "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "6.5.0"
   }
